# phpshield

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPARISON.md  COMPETITIVE_ANALYSIS.md  GITHUB_READY.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  USAGE.md  composer.json
.qwen/: settings.json  settings.json.orig
build-production/: CMakeCache.txt
build-production-hostx86/: CMakeCache.txt  Makefile  cmake_install.cmake
build-production-hostx86/loader/: Makefile  cmake_install.cmake  php_phpshield.exp  php_phpshield.lib
build-production-nmake/: CMakeCache.txt
build-release-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  phpshield.slnx
build-release-win/loader/: phpshield.vcxproj  phpshield.vcxproj.filters
cmake/: CompilerHardening.cmake  FindPHP.cmake
compiler/: README.md
compiler/src/: Analyzer.php  BundleWriter.php  BytecodeOptimizer.php  CodeVirtualizer.php  ControlFlowObfuscator.php  Crypto.php  ExecutionStrategy.php  FunctionNameHasher.php  IntegrityVerifier.php  IrBuilder.php  JitOptimizer.php  LaravelProfile.php  LicenseWriter.php  NameObfuscator.php  Obfuscator.php  OpcodeCapture.php  OpcodePlan.php  Parser.php  PathPolicy.php  PolymorphicEncryption.php  StringPoolEncryption.php  SymbolTable.php  VMCompiler.php
compiler/tests/: compiler_smoke.php
docs/: architecture.md  cmake-build.md  file-format.md  hardening.md  laravel-guide.md  laravel.md  licensing.md  php84-compatibility.md  threat-model.md  usage.md  windows.md
examples/laravel/: phpshield.ini.example
examples/simple/: index.php
examples/simple/src/: Greeter.php
loader/: CMakeLists.txt  config.m4  php_phpshield.h  phpshield.c
loader/src/: anti_tamper.c  anti_tamper.h  bundle.c  bundle.c.bak  bundle.h  cache.c  cache.h  crypto.c  crypto.h  execute.c  execute.h  ir.c  ir.h  license.c  license.h  manifest.c  manifest.h  memcrypt.c  memcrypt.h  mmap.c  mmap.h  opcode.c  opcode.h  pathmap.c  pathmap.h  vm.c  vm.h
releases/v1.0.0/: RELEASE_NOTES.md
releases/v1.0.0/linux-x64/: README.md
releases/v1.0.0/windows-x64/: README.md
releases/v1.0.1/: RELEASE_NOTES.md  VERIFICATION.md
releases/v1.0.1/windows-x64/: README.md
stubs/: file.stub.php
tests/: benchmark.php  run.sh  smoke_test.php  test.ps1  test.sh
tests/fixtures/laravelish/: artisan
tests/fixtures/laravelish/app/Services/: DemoService.php
tests/fixtures/laravelish/bootstrap/: app.php
tests/fixtures/laravelish/routes/: web.php
tests/fixtures/simple/: Greeter.php  index.php  lib.php
tests/fixtures/tamper/: README.md
tools/windows-gui/: phpshield-gui.ps1
